@@ -1,4 +1,7 @@
 from django.conf.urls import *
+from django.views.generic import RedirectView
+from django.core.urlresolvers import reverse_lazy
+
 from photologue.views import PhotoListView, PhotoDetailView, GalleryListView, \
     GalleryDetailView, PhotoArchiveIndexView, PhotoDateDetailView, PhotoDayArchiveView, \
     PhotoYearArchiveView, PhotoMonthArchiveView, GalleryArchiveIndexView, GalleryYearArchiveView, \
@@ -22,7 +25,9 @@ urlpatterns = patterns('',
     url(r'^gallery/$',
         GalleryArchiveIndexView.as_view(),
         name='pl-gallery-archive'),
-
+    url(r'^$',
+        RedirectView.as_view(url=reverse_lazy('pl-gallery-archive')),
+        name='pl-photologue-root'),
     url(r'^gallery/(?P<slug>[\-\d\w]+)/$', GalleryDetailView.as_view() , name='pl-gallery'),
     url(r'^gallery/page/(?P<page>[0-9]+)/$', GalleryListView.as_view(), name='pl-gallery-list'),
 
