@@ -19,6 +19,7 @@ List of changes:
 - fixed issue #52, transactions in migration
 - fixed issue #51, uniqueness collisions in migration
 - Initial setup of data: removed plinit and replaced it with a South data migration.
+- Accessing the root url (usually /photologue/ will now redirect you to the gallery list view.
 
 2.5 (2012-12-13)
 ----------------
